--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "3306:3306"
 
-#  adminer:
-#    image: adminer
-#    ports:
-#      - "8080:8080"
+  adminer:
+    image: adminer
+    ports:
+      - "8080:8080"
